Terraform/Elastic IP Variable Setup Using Terraform.tf
The Nautilus DevOps team is strategizing the migration of a portion of their infrastructure to the AWS cloud. As part of this phased migration approach, they need to allocate an Elastic IP address to support external access for specific workloads.

For this task, create an AWS Elastic IP using Terraform with the following requirement:

The Elastic IP name devops-eip should be stored in a variable named KKE_eip. The Terraform working directory is /home/bob/terraform.
Note:

The configuration values should be stored in a variables.tf file.

The Terraform script should be structured with a main.tf file referencing variables.tf.

Right-click under the EXPLORER section in VS Code and select Open in Integrated Terminal to launch the terminal.

Solution:

variables.tf

variable "KKE_eip" {
  description = "Name tag for the Elastic IP"
  type        = string
  default     = "devops-eip"
}

main.tf

resource "aws_eip" "this" {
  vpc = true

  tags = {
    Name = var.KKE_eip
  }
}

terraform init
terraform plan
terraform apply
